# NutriAgent-AI

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: eval_nutrition_data.json
src/: config.py  evaluation.py  run_pipeline.py
src/cores/: CoT_agent.py  prompts.py
src/processing/: ingestion.py
src/utils/: helpers.py
src/vectordb/: qdrantdb.py
